<resources>
    <string name="app_name">Coffee Companion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_brew_guide">Brewing Guide</string>
    <string name="prefix_grind_size">Grind Size:</string>
    <string name="prefix_quantity">Quantity: </string>
    <string name="prefix_brew_time">Time: </string>
    <string name="prefix_instruction">"Instructions: "</string>
    <string name="favorite">Favorite</string>
    <string name="coffeeName">Name of Brewing Method</string>
    <string name="coffeeTime">Minutes to Brew</string>
    <string name="coffeeGrind">Grind of Coffee</string>
    <string name="coffeeInstructions">Instructions</string>
    <string name="coffeeAmount">Amount of Coffee this makes</string>
    <string name="quiz_question_1">Do you often find yourself running late in the morning?</string>
    <string name="button_yes">yes</string>
    <string name="button_no">no</string>
    <string name="quiz_question_2">Are you detail oriented and methodical?</string>
    <string name="quiz_question_3">Are you a clean freak?</string>
    <string name="quiz_question_4">What time of day do you usually make coffee?</string>
    <string name="button_morning">In the morning</string>
    <string name="button_all_day">All times of the day</string>
    <string name="quiz_question_5">How do you like your coffee?</string>
    <string name="button_black">Black</string>
    <string name="button_doctored">Doctored</string>
    <string name="quiz_question_6">What is your coffee brewing budget?</string>
    <string name="button_75">$75 or less</string>
    <string name="button_76">$75 or more</string>
    <string name="quiz_question_7">Do you or would you like to drink coffee for the flavor or caffeine?</string>
    <string name="button_flavor">Flavor</string>
    <string name="button_caffeine">Caffeine</string>
    <string name="button_submit">Submit Answers</string>
    <string name="brewTimer">Brew Timer</string>
</resources>
